modal window image loading fix - flag won't be visible until image is not loaded

--- a/src/App.css
+++ b/src/App.css
@@ -234,6 +234,10 @@ body {
   }
 }
 
+.flight-details .modal-body {
+  background: white;
+}
+
 .flight-details .card-body .airlines-logo {
   width: 100px;
   font-size: 13px;
